src/test/ui/specialization/default-associated-type-bound-2.stderr
warning: the feature `specialization` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/default-associated-type-bound-2.rs:2:12
   |
LL | #![feature(specialization)]
   |            ^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #31844 <https://github.com/rust-lang/rust/issues/31844> for more information
   = help: consider using `min_specialization` instead, which is more stable and complete

error[E0277]: can't compare `&'static B` with `B`
  --> $DIR/default-associated-type-bound-2.rs:16:22
   |
LL |     default type U = &'static B;
   |                      ^^^^^^^^^^ no implementation for `&'static B == B`
   |
   = help: the trait `PartialEq<B>` is not implemented for `&'static B`
note: required by a bound in `X::U`
  --> $DIR/default-associated-type-bound-2.rs:6:13
   |
LL |     type U: PartialEq<T>;
   |             ^^^^^^^^^^^^ required by this bound in `X::U`
help: consider introducing a `where` bound, but there might be an alternative better way to express this requirement
   |
LL | impl<B: 'static, T> X<B> for T where &'static B: PartialEq<B> {
   |                                ++++++++++++++++++++++++++++++

error: aborting due to previous error; 1 warning emitted

For more information about this error, try `rustc --explain E0277`.
